# dependabot-race-condition

./: README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
src/: main.py
