[tool.poetry]
name = "dependabot-race-condition"
version = "0.0.0"
description = "Reproduce a race-condition with dependabot PRs being based on HEAD^ after the first PR auto-merges"
authors = ["Howard Cox <dev.anubis@gmail.com>"]
readme = "README.md"
packages = [{include = "test", from = "src"}]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
pydantic = "^2.9.2"
httpx = "^0.27.0"
